Manifests/flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-todo
  labels:
    app: todo-app
    tier: frontend
spec:
  selector:
    matchLabels:
      app: todo-app
      tier: frontend
  replicas: 3
  template:
    metadata:
      labels:
        app: todo-app
        tier: frontend
    spec:
      containers:
      - name: flask-todo
        image: arr8154/todo-flask-app:latest  # Replace with your Docker Hub username
        ports:
        - containerPort: 5000
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: flask-todo
  labels:
    app: todo-app
    tier: frontend
spec:
  type: NodePort
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: todo-app
    tier: frontend
