Manifests/health-monitoring.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-todo-health
  labels:
    app: todo-app-health
    tier: frontend-health
spec:
  selector:
    matchLabels:
      app: todo-app-health
      tier: frontend-health
  replicas: 2
  template:
    metadata:
      labels:
        app: todo-app-health
        tier: frontend-health
    spec:
      containers:
      - name: flask-todo-health
        image: arr8154/todo-flask-app:latest
        ports:
        - containerPort: 5000
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: flask-todo-health
  labels:
    app: todo-app-health
    tier: frontend-health
spec:
  type: NodePort
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: todo-app-health
    tier: frontend-health
