Manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  labels:
    app: todo-app
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"  # Ensures AWS NLB (can use "elb" for classic LB)
spec:
  type: LoadBalancer
  selector:
    app: todo-app
  ports:
    - protocol: TCP
      port: 80          # Exposed externally
      targetPort: 5000   # Flask app inside the container
